--- a/mortgage-front/src/app/admin/customer-list/customer-list.component.html
+++ b/mortgage-front/src/app/admin/customer-list/customer-list.component.html
@@ -1,4 +1,4 @@
-<div id="mainAll">
+<div class="mainAll">
   <mat-form-field>
     <mat-label>חפש</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="לדוגמה, שם">
@@ -30,15 +30,29 @@
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef>פעולות</th>
           <td mat-cell *matCellDef="let customer">
-            <button mat-icon-button color="primary" (click)="editCustomer(customer)">
-              <mat-icon>edit</mat-icon>
+            <button mat-icon-button [matMenuTriggerFor]="actionsMenu" matTooltip="אפשרויות נוספות"
+              matTooltipPosition="left" class="icon-button">
+              <mat-icon>more_vert</mat-icon>
             </button>
-            <button mat-icon-button color="warn" (click)="deleteCustomer(customer)">
-              <mat-icon>delete</mat-icon>
-            </button>
-            <app-download-accompanying-form [customerId]="customer.id"></app-download-accompanying-form>
+            <mat-menu #actionsMenu="matMenu">
+              <button mat-menu-item (click)="editCustomer(customer)"  class="icon-button edit">
+                <mat-icon>edit</mat-icon>
+                <span>עריכת ליד</span>
+              </button>
+              <button mat-menu-item (click)="deleteCustomer(customer)"  class="icon-button delete">
+                <mat-icon>delete</mat-icon>
+                <span>מחיקת ליד</span>
+              </button>
+              <button mat-menu-item (click)="sendMsg(customer)" class="icon-button send-msg">
+                <mat-icon>message</mat-icon>
+                <span>שליחת מסר לליד</span>
+              </button>
+            </mat-menu>
+            <app-download-accompanying-form [customerId]="customer.id" matTooltip="הורדת פרטי לקוח"
+              matTooltipPosition="left" class="icon-button download"></app-download-accompanying-form>
           </td>
         </ng-container>
+        
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
@@ -71,15 +85,29 @@
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef>פעולות</th>
           <td mat-cell *matCellDef="let customer">
-            <button mat-icon-button color="primary" (click)="editCustomer(customer)">
-              <mat-icon>edit</mat-icon>
+            <button mat-icon-button [matMenuTriggerFor]="actionsMenu" matTooltip="אפשרויות נוספות"
+              matTooltipPosition="left" class="icon-button">
+              <mat-icon>more_vert</mat-icon>
             </button>
-            <button mat-icon-button color="warn" (click)="deleteCustomer(customer)">
-              <mat-icon>delete</mat-icon>
-            </button>
-            <app-download-accompanying-form [customerId]="customer.id"></app-download-accompanying-form>
+            <mat-menu #actionsMenu="matMenu">
+              <button mat-menu-item (click)="editCustomer(customer)"  class="icon-button edit">
+                <mat-icon>edit</mat-icon>
+                <span>עריכת לקוח</span>
+              </button>
+              <button mat-menu-item (click)="deleteCustomer(customer)"  class="icon-button delete">
+                <mat-icon>delete</mat-icon>
+                <span>מחיקת לקוח</span>
+              </button>
+              <button mat-menu-item (click)="sendMsg(customer)"  class="icon-button send-msg">
+                <mat-icon>message</mat-icon>
+                <span>שליחת מסר</span>
+              </button>
+            </mat-menu>
+            <app-download-accompanying-form [customerId]="customer.id" matTooltip="הורדת פרטי לקוח"
+              matTooltipPosition="left" class="icon-button download"></app-download-accompanying-form>
           </td>
         </ng-container>
+        
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
@@ -113,23 +141,36 @@
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef>פעולות</th>
           <td mat-cell *matCellDef="let customer">
-            <button mat-icon-button color="primary" (click)="editCustomer(customer)">
-              <mat-icon>edit</mat-icon>
+            <button mat-icon-button [matMenuTriggerFor]="actionsMenu" matTooltip="אפשרויות נוספות"
+              matTooltipPosition="left" class="icon-button">
+              <mat-icon>more_vert</mat-icon>
             </button>
-            <button mat-icon-button color="warn" (click)="deleteCustomer(customer)">
-              <mat-icon>delete</mat-icon>
-            </button>
-
-            <app-download-accompanying-form [customerId]="customer.id"></app-download-accompanying-form>
+            <mat-menu #actionsMenu="matMenu">
+              <button mat-menu-item (click)="editCustomer(customer)" class="icon-button edit">
+                <mat-icon>edit</mat-icon>
+                <span>עריכת לקוח ארכיון</span>
+              </button>
+              <button mat-menu-item (click)="deleteCustomer(customer)"  class="icon-button delete">
+                <mat-icon>delete</mat-icon>
+                <span>מחיקת לקוח ארכיון</span>
+              </button>
+              <button mat-menu-item (click)="sendMsg(customer)"  class="icon-button send-msg">
+                <mat-icon>message</mat-icon>
+                <span>שליחת מסר ללקוח ארכיון</span>
+              </button>
+            </mat-menu>
+            <app-download-accompanying-form [customerId]="customer.id" matTooltip="הורדת פרטי לקוח"
+              matTooltipPosition="left" class="icon-button download"></app-download-accompanying-form>
           </td>
         </ng-container>
+        
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
       <mat-paginator #archivedCustomersPaginator [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons></mat-paginator>
-      <button mat-fab color="primary" class="add-button" (click)="addCustomer()"
-        style="position: fixed;bottom: 8vh;left: 2vw;z-index: 1000;">
-        <mat-icon class="add-icon">add</mat-icon>
+      <button mat-fab color="primary" class="icon-button add" (click)="addCustomer()" matTooltip="הוספת לקוח חדש למערכת"
+        matTooltipPosition="above" style="position: fixed;bottom: 8vh;left: 2vw;z-index: 1000;">
+        <mat-icon class="icon" >add</mat-icon>
       </button>
       <export-to-excel [typeOfCustomer]="2"></export-to-excel>
     </div>
