--- a/mortgage-front/src/app/admin/user-list/user-list.component.html
+++ b/mortgage-front/src/app/admin/user-list/user-list.component.html
@@ -1,4 +1,5 @@
-<div id="content">
+<div class="mainAll">
+<div class="contents">
     <div class="form-field-div">
         <mat-form-field class="form-field" dir="rtl">
             <mat-label>חפש</mat-label>
@@ -56,4 +57,5 @@
 
         <mat-paginator [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons dir="rtl"></mat-paginator>
     </div> -->
+</div>
 </div>
