--- a/mortgage-front/src/app/shared/document-type-list/document-type-list.component.html
+++ b/mortgage-front/src/app/shared/document-type-list/document-type-list.component.html
@@ -1,3 +1,4 @@
+<div class="mainAll">
 <p>רשימת סוגי המסמכים </p>
 <div id="content" >
     <mat-form-field dir="rtl">
@@ -45,3 +46,4 @@
     </button>
     </div>
     
+</div>
