--- a/mortgage-front/src/app/admin/download-accompanying-form/download-accompanying-form.component.html
+++ b/mortgage-front/src/app/admin/download-accompanying-form/download-accompanying-form.component.html
@@ -1,3 +1,3 @@
 <button mat-icon-button color="warn" (click)="download()">
-  <mat-icon>download</mat-icon>
+  <mat-icon class="icon">download</mat-icon>
 </button>
