--- a/mortgage-front/src/app/admin/lead-list/lead-list.component.scss
+++ b/mortgage-front/src/app/admin/lead-list/lead-list.component.scss
@@ -6,16 +6,16 @@ th {
   background-color: transparent;
 }
 
-#content {
-  margin: 0 auto;
-  background-color: rgba(255, 255, 255, 0.602);
-  padding: 25px;
-  border-radius: 10px;
-  border: 5px solid rgba(128, 128, 128, 0.13);
-  min-width: max-content;
-  min-height: 60vh;
-  max-width: 70%;
-}
+// .contents {
+//   margin: 0 auto;
+//   // background-color: rgba(255, 255, 255, 0.602);
+//   padding: 25px;
+//   // border-radius: 10px;
+//   // border: 5px solid rgba(128, 128, 128, 0.13);
+//   min-width: max-content;
+//   min-height: 60vh;
+//   max-width: 70%;
+// }
 
 @media screen and (max-width: 900px) {
   .mat-table {
