--- a/mortgage-front/src/styles.scss
+++ b/mortgage-front/src/styles.scss
@@ -27,3 +27,92 @@ tr:hover{
 ::-webkit-scrollbar-thumb:hover {
     background: #576d82;
 }
+.rotate {
+    animation: rotation 2s infinite linear;
+  }
+  
+  @keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+  }
+  .icon-button {
+    transition: transform 0.8s, color 0.3s;
+  }
+  
+  .icon {
+    transition: transform 0.3s, color 0.3s;
+  }
+  
+  .icon-button.delete:hover .icon {
+    transform: rotate(20deg);
+    color: rgb(174, 0, 0);
+  }
+  
+  .icon-button.edit:hover .icon {
+    transform: scale(1.2);
+    color: rgb(84, 139, 84);
+  }
+  
+  .icon-button.add:hover .icon {
+    transform: rotate(360deg);
+    color: rgb(151, 151, 255);
+  }
+  
+  .icon-button.email:hover .icon {
+    transform: scale(1.2) rotate(-10deg);
+    color: rgb(255, 213, 136);
+  }
+  
+  .icon-button.whatsapp:hover .icon {
+    transform: scale(1.2);
+    color: #25d366; /* צבע ירוק של ווטסאפ */
+  }
+  .icon-button.download:hover .icon {
+    transform: translateY(10px);
+    color: #035ba2; /* צבע כחול */
+  }
+  .icon-button.attach:hover .icon {
+    transform: rotate(45deg) scale(1.3);
+    color: #ff5722; /* צבע כתום */
+  }
+  /* אנימציה לאייקון מטוס */
+  .icon-button.send:hover .icon {
+    float: right;
+    transform: translateY(-5px) rotate(-30deg);
+    color: #feffb3; /* צבע ירוק */
+    animation: fly 0.5s  alternate;
+  }
+  
+  @keyframes fly {
+    0% {
+        transform: translateY(0) rotate(0);
+      }
+      50% {
+        transform: translateY(-8px) rotate(-45deg);
+      }
+      100% {
+        transform: translateY(-5px) rotate(-45deg);
+      }
+    
+  }
+  .mainAll {
+    border-radius: 10px;
+    border: 5px solid rgba(128, 128, 128, 0.13);
+    padding: 25px;
+    background-color: rgba(255, 255, 255, 0.582);
+    margin: 0 auto;
+    min-height: 100vh;
+  
+  }
+  .contents {
+    background-color: rgba(203, 210, 217, 0.211);
+    border: 2px solid rgba(128, 128, 128, 0.144);
+    width: 50vw;
+    margin: 0px auto;
+    padding: 25px;
+  }
+  
