--- a/mortgage-front/src/app/customer/customer-portal/customer-portal.component.html
+++ b/mortgage-front/src/app/customer/customer-portal/customer-portal.component.html
@@ -1,5 +1,5 @@
 <div id="mainPage">
-<navigation-menu [componentsList]="componentArrayOfCustomer"></navigation-menu>,
+<navigation-menu [componentsList]="componentArrayOfCustomer"></navigation-menu>
 </div>
 
 
