add icons of notifications and documents

--- a/mortgage-front/src/app/global/toolbar/toolbar.component.html
+++ b/mortgage-front/src/app/global/toolbar/toolbar.component.html
@@ -9,9 +9,19 @@
     </button>
     <div class="welcome-message">
       <span class="span">!שלום {{ user }}</span>
+      <!-- Bell icon for notifications -->
+      <button mat-icon-button (click)="openNotifications()">
+        <mat-icon [matBadge]="unreadNotificationsCount" [matBadgeHidden]="!hasUnreadNotifications"
+          matBadgeColor="warn">notifications</mat-icon>
+      </button>
+      <!-- Document icon for pending documents -->
+      <button mat-icon-button (click)="openDocuments()" matBadge="1" matBadgeSize="small" class="demo-section"
+        matTooltip="מסמכים שהועלו ולא נשמרו" matTooltipPosition="below" *ngIf="hasPendingDocuments">
+        <mat-icon>description</mat-icon>
+      </button>
     </div>
   </div>
-  <button mat-icon-button (click)="toggleNavigationMenu()" >
+  <button mat-icon-button (click)="toggleNavigationMenu()">
     <mat-icon>menu</mat-icon>
   </button>
 </mat-toolbar>
