--- a/mortgage-front/src/app/shared/customer-detail-modal/customer-detail-modal.component.html
+++ b/mortgage-front/src/app/shared/customer-detail-modal/customer-detail-modal.component.html
@@ -138,7 +138,7 @@
 
             <div class="is-properties-container">
               <mat-label id="is-properties-lable">האם יש נכסים</mat-label>
-              <mat-slide-toggle [(ngModel)]="formData['has_other_properties']" name="has_other_properties" />
+              <!-- <mat-slide-toggle [(ngModel)]="formData['has_other_properties']" name="has_other_properties" /> -->
               <mat-slide-toggle [(ngModel)]="formData['has_other_properties']" name="has_other_properties" />
             </div>
           </div>
