latest version 27/7. Added functions for saving and canceling document selection. Cleaning up the code

--- a/mortgage-front/src/app/Components/documents-list-customer/documents-list-customer.component.css
+++ b/mortgage-front/src/app/Components/documents-list-customer/documents-list-customer.component.css
@@ -95,5 +95,8 @@ align-items: center;
 height: 100%; /* כדי למלא את גובה הדף בכל המסך */
 }
 .span:hover{
-color:rgb(41, 53, 147);
+color:#4469d8;
 }
+
+
+
