--- a/mortgage-front/src/app/Components/documents-list-customer/documents-list-customer.component.html
+++ b/mortgage-front/src/app/Components/documents-list-customer/documents-list-customer.component.html
@@ -1,5 +1,3 @@
-
-
 <main>
   @if(dataSource.data.length>0){
   <div dir="rtl">
@@ -10,7 +8,7 @@
   </div>
 
   <div>
-    <table 
+    <table
       mat-table
       [dataSource]="dataSource"
       class="mat-elevation-z8"
@@ -38,18 +36,18 @@
       </ng-container>
 
       <ng-container matColumnDef="icon">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell  *matCellDef="let element; let i = index">
+        <th mat-header-cell *matHeaderCellDef><b> מסמך </b></th>
+        <td mat-cell *matCellDef="let element; let i = index">
           @if(element.status==0){
           <button
+            class="icon-button attach"
             mat-icon-button
             aria-label="upload file"
-            mat-icon-button
             (click)="fileInput.click()"
             matTooltip="צירוף מסמך"
             matTooltipPosition="left"
           >
-            <mat-icon>attach_file</mat-icon>
+            <mat-icon class="icon">attach_file</mat-icon>
             <input
               type="file"
               #fileInput
@@ -58,13 +56,20 @@
             />
           </button>
           } @if (element.status==1) {
-            <span (click)="viewDocument(view(element.id))" style="cursor:pointer;" class="span">
-              {{ view(element.id)?.name }}
-            </span>
-          <!-- {{ view(element.id).name }} -->
-          <button mat-button (click)="xfunc(element,i)">ביטול</button>
+          <span
+            (click)="viewDocument(view(element.id))"
+            style="cursor: pointer"
+            class="span"
+          >
+          {{ element.document_path }}
+          </span>
+
+          <button mat-button (click)="cancelDocument(element)">ביטול</button>
           } @if (element.status==2) {
-          {{ view(element.id)?.name }}
+          {{ element.document_path }}
+          <button mat-button (click)="download(element)">
+            לחץ כאן להורדה
+          </button>
           }
         </td>
       </ng-container>
@@ -73,10 +78,8 @@
         <th mat-header-cell *matHeaderCellDef><b> תאריך עדכון </b></th>
         <td mat-cell *matCellDef="let element">
           @if(element.status==2){
-          @if(element.status==2){
-          {{ formatDate(element.created_at) }}
-        }
-        }
+          {{ formatDate(element.updated_at) }}
+          }
         </td>
       </ng-container>
       <ng-container matColumnDef="approval">
@@ -84,20 +87,25 @@
         <td mat-cell *matCellDef="let element">
           @if (element.status === 1) {
           <section class="example-section">
-            <mat-checkbox  #myCheckbox id="mat-checkbox"
-            (change)="onCheckboxChange($event.checked, element)"
+            <mat-checkbox
+              #myCheckbox
+              id="mat-checkbox"
+              (change)="onCheckboxChange($event.checked, element)"
               class="example-margin"
               [disabled]="element.status !== 1"
-              [matTooltip]="element.status === 0 ? 'עדיין לא נבחר מסמך' : ''"
             ></mat-checkbox>
           </section>
+          } @else if(element.status===0){
+          <mat-checkbox
+            #myCheckbox
+            id="mat-checkbox"
+            (change)="onCheckboxChange($event.checked, element)"
+            class="example-margin"
+            [disabled]="true"
+          ></mat-checkbox>
           }
           @else {
-              <mat-checkbox #myCheckbox  id="mat-checkbox"
-              (change)="onCheckboxChange($event.checked, element)"
-                class="example-margin"
-                [disabled]="true"
-              ></mat-checkbox>
+            <mat-icon class="icon">check</mat-icon>
           }
         </td>
       </ng-container>
@@ -108,15 +116,16 @@
   </div>
   <div class="send-all">
     <div class="example-button-row">
-      <button mat-flat-button (click)="saveFiles()">
-       <span class="button-text" >שלח מסמכים שנבחרו</span>
-        <span class="icon-container"><i class="fa-solid fa-paper-plane"></i></span>
+      <button mat-raised-button (click)="saveFiles()">
+        <span class="button-text">שלח מסמכים</span>
+        <span class="icon-container"
+          ><i class="fa-solid fa-paper-plane"></i
+        ></span>
       </button>
     </div>
   </div>
 
   } @else {
-  <div class="centered-message">לא נמצאו עבורך מסמכים</div>
   <div class="centered-message">לא נמצאו עבורך מסמכים</div>
   }
 </main>
