--- a/mortgage-front/src/app/global/toolbar/toolbar.component.html
+++ b/mortgage-front/src/app/global/toolbar/toolbar.component.html
@@ -3,12 +3,12 @@
     <div class="logo-container">
       <img src="assets/logo.png" alt="Logo" class="logo">
     </div>
-    <button class="buttonLog" mat-button routerLink="/auth/login" (click)="loginOrLogout()">
-      <mat-icon>{{ isLoggedIn ? 'logout' : 'login' }}</mat-icon>
-      {{ isLoggedIn ? 'יציאה' : 'התחברות' }}
+    <button class="buttonLog" mat-button routerLink="/auth/login" >
+      <mat-icon>{{ loginservice.isLoggedIn() ? 'logout' : 'login' }}</mat-icon>
+      {{ loginservice.isLoggedIn() ? 'יציאה' : 'התחברות' }}
     </button>
     <div class="welcome-message">
-      <span class="span">!שלום {{ user }}</span>
+      <span class="span">!שלום {{this.loginservice.GetCurrentUser().userName!=undefined?this.loginservice.GetCurrentUser().userName:'אורח' }}</span>
     </div>
   </div>
   <button mat-icon-button (click)="toggleNavigationMenu()" >
